libs/config/tests/errors/ce3_duplicate_property_separate/stdout.ansi
[0m[1m[38;5;9merror[CE3][0m[1m: property was defined more than once[0m
  [0m[34m┌─[0m source.hpp:6:9
  [0m[34m│[0m
[0m[34m3[0m [0m[34m│[0m         inner = "something";
  [0m[34m│[0m         [0m[34m-----[0m [0m[34malso defined here[0m
  [0m[34m·[0m
[0m[34m6[0m [0m[34m│[0m         [0m[31minner[0m = "something";
  [0m[34m│[0m         [0m[31m^^^^^[0m [0m[31mduplicate property[0m

